# tainty-thing

./: .gitignore  BuildParser.md  CMakeLists.txt  PythonInterpreter.txt  README.md  analyze.py  backtrack.py  execution.py  gen_riscv.sh  instruction.py  interpreter.py  llc_version.txt  llvm-iterator.c  llvm-iterator.cpp  llvm-parser.c  ln.arm  ln.s  parser.py  parsing.py  policy.py  requirements.txt  state.py  taint.py  testprogram.c  testprogram.ll  trivial.c
llvm/: BuildParser.md  CMakeLists.txt  llvm-iterator.cpp  output.json  testprogram.bc  testprogram2.bc  testprogram2.c  testprogram2.ll
testfiles/: add.c  cmpxchg.c  hash.c  multiplefuns.c
